--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -2,7 +2,7 @@
     "EXPERIENCES": "Experiences",
     "PROJECTS": "Projects",
     "CONTACT": "Contact",
-    "CERTIFICATIONS": "Certifications",
+    "CERTIFICATES": "Certificates",
     "FULLSTACK": "Full Stack Developer",
     "DEGREE": "Bachelor`s Degree in Information Systems",
     "MARKETING-BUSINESS": "Marketing Business",
