--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -2,7 +2,7 @@
     "EXPERIENCES": "Experiencia",
     "PROJECTS": "Projetos",
     "CONTACT": "Contato",
-    "CERTIFICATIONS": "Certificações",	
+    "CERTIFICATES": "Certificações",	
     "FULLSTACK": "Desenvolvedor Full Stack",
     "DEGREE": "Bacharel Sistema da Informação",
     "MARKETING-BUSINESS": "Marketing e Negócios",
