--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -1,5 +1,5 @@
 {
-    "EXPERIENCES": "Experiencia",
+    "EXPERIENCES": "Experiências",
     "PROJECTS": "Projetos",
     "CONTACT": "Contato",
     "CERTIFICATES": "Certificações",	
