--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -1,10 +1,18 @@
 {
-    "EXPERIENCES": "Experiências",
+    "MENU": {
+        "EXPERIENCES": "Experiências",
+        "PROJECTS": "Projetos",
+        "CONTACT": "Contato",
+        "CERTIFICATES": "Certificações"
+    },
+    "EXPERIENCES": "Experiências de Trabalho",
     "PROJECTS": "Projetos",
     "CONTACT": "Contato",
     "CERTIFICATES": "Certificações",	
     "FULLSTACK": "Desenvolvedor Full Stack",
     "DEGREE": "Bacharel Sistema da Informação",
     "MARKETING-BUSINESS": "Marketing e Negócios",
-    "IOT-PLATFORM": "IoT Plataforma"
+    "IOT-PLATFORM": "IoT Plataforma",
+    "JOBS-DESCRIPTION": "Na Blanko, atuei na construção de uma plataforma para venda de propagandas pré-fabricados utilizando a imagem de pessoas famosas, pude participar de todos os processos na criação. Na Manusis4, atuava numa plataforma de dispositivos IoTs, gerenciando mais de 10 mil devices e seus ativos, tinha múltiplas responsabilidades, desde a manutenção da infra na Aws, até a construção de novas features na plataforma em Angular e em React."
+    
 }
