--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -3,8 +3,20 @@
         "EXPERIENCES": "Experiences",
         "PROJECTS": "Projects",
         "CONTACT": "Contact",
-        "CERTIFICATES": "Certificates"
+        "CERTIFICATES": "Certificates",
+        "ABOUT-ME": "About Me"
     },
+    
+    "EXPERIENCES": "Work Experiences",
+    "PROJECTS": "Projects",
+    "CONTACT": "Contact",
+    "CERTIFICATES": "Certificates",
+    "ABOUT-ME": "ABOUT ME",
+    "FULLSTACK": "Full Stack Developer",
+    "DEGREE": "Bachelor`s Degree in Information Systems",
+    "MARKETING-BUSINESS": "Marketing Business",
+    "IOT-PLATFORM": "IoT Platform",
+    "JOBS-DESCRIPTION": "At Blanko, I worked as a Full Stack developer, building from scratch a platform for selling pre-fabricated advertisements using famous people images. At Evoy, I worked on an IoT device platform, managing more than 10 thousand devices and their assets, I had multiple responsibilities, from maintaining the infrastructure in Aws, to building new features in React and Node.",
     "PROJECT-CARD": {
         "WEB-LINK": "Check out Web Code",
         "API-LINK": "Check out Api Code",
@@ -24,13 +36,13 @@
             "DESCRIPTION": "Restaurant System with Live Menu"
         }
     },
-    "EXPERIENCES": "Work Experiences",
-    "PROJECTS": "Projects",
-    "CONTACT": "Contact",
-    "CERTIFICATES": "Certificates",
-    "FULLSTACK": "Full Stack Developer",
-    "DEGREE": "Bachelor`s Degree in Information Systems",
-    "MARKETING-BUSINESS": "Marketing Business",
-    "IOT-PLATFORM": "IoT Platform",
-    "JOBS-DESCRIPTION": "At Blanko, I worked as a Full Stack developer, building from scratch a platform for selling pre-fabricated advertisements using famous people images. At Evoy, I worked on an IoT device platform, managing more than 10 thousand devices and their assets, I had multiple responsibilities, from maintaining the infrastructure in Aws, to building new features in React and Node."
+    "ABOUT-SECTION":{
+        "TITLE": "Hello! I`m Ed Angelis R Ribeiro Brazilian, 12/23/1984 \nWelcome to my portfolio",
+        "DESCRIPTION": {
+            "P1": "I have always been passionate about technology, I was introduced to development after joining the Information Systems course in 08/2017, since then I have been programming and studying practically every day of my life, and smiling I will continue doing this for the rest of it.",
+            "P2": "Very curious, I've created games in Unity, Apps in Flutter, I've even spent a few months focusing on machine learning, but my focus is JavaScript frameworks for Web and Mobile development with React, React-Native and Node js.",
+            "P3": "When I'm not coding, studying or exercising, I enjoy some very diverse activities, such as scuba diving, playing poker, playing beach-tennis, an interesting fact about me is that at some point in my life I have already worded as a professional poker player. and at another time as a diving instructor. In addition to these activities, I like the basics, listening to music, watching movies, playing games, reading something to relax before bed.",
+            "P4": "I see myself in 10 years, working on some project with a global impact with millions of users, always coding, but leading a development team, beyond work I see myself taking care of a garden, some cats, and watching my children grow up healthy."
+        }
+    }
 }
