--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -16,7 +16,7 @@
     "DEGREE": "Bacharel Sistema da Informação",
     "MARKETING-BUSINESS": "Marketing e Negócios",
     "IOT-PLATFORM": "IoT Plataforma",
-    "JOBS-DESCRIPTION": "Na Blanko, atuei na construção de uma plataforma para venda de propagandas pré-fabricados utilizando a imagem de pessoas famosas, pude participar de todos os processos na criação. Na Manusis4, atuava numa plataforma de dispositivos IoTs, gerenciando mais de 10 mil devices e seus ativos, tinha múltiplas responsabilidades, desde a manutenção da infra na Aws, até a construção de novas features na plataforma em Angular e em React.",
+    "JOBS-DESCRIPTION": "Na Blanko, atuei na construção de uma plataforma para venda de imagem de famosos e propagandas pré-fabricadas, pude participar de todos os processos na criação. Na Manusis4, atuava numa plataforma de dispositivos IoTs, gerenciando mais de 10 mil devices e seus ativos, tinha múltiplas responsabilidades, desde a manutenção da infra na Aws, até a construção de novas features na plataforma em Angular e em React.",
     "PROJECT-CARD": {
         "WEB-LINK": "Confira o Código da Web",
         "API-LINK": "Confira o Código da Api",
