--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -44,5 +44,19 @@
             "P2": "When I'm not coding, studying or exercising, I enjoy some very diverse activities, such as scuba diving, playing poker, playing beach-tennis, an interesting fact about me is that at some point in my life I have already worded as a professional poker player. and at another time as a diving instructor. In addition to these activities, I like the basics, listening to music, watching movies, playing games, reading something to relax before bed.",
             "P3": "I see myself in 10 years working on some project with a global impact with millions of users, always coding, but also leading a development team, beyond work I see myself taking care of a garden, some cats, and watching my children grow up."
         }
+    },
+    "TYPING":{
+        "AGILE": "AGILE",
+        "SCRUM": "SCRUM",
+        "CLEAN-CODE": "CLEAN CODE",
+        "TEXT": {
+            "1": "Readability",
+            "2": "Testability",
+            "3": "Self-documentation",
+            "4": "Individuals over processes",
+            "5": "Working software over comprehensive documentation",
+            "6": "Customer collaboration over contract negotiation",
+            "7": "Responding to change over following a plan"
+        }
     }
 }
