--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -33,6 +33,14 @@
             "TITLE": "PlayLingo",
             "DESCRIPTION": "Jogo Educativo em Unity para aprender inglês"
         },
+        "RACKETS-UP": {
+            "TITLE": "Rackets Up",
+            "DESCRIPTION": "App de Esportes de Raquete"
+        },
+        "EXAM-AI": {
+            "TITLE": "Exam AI",
+            "DESCRIPTION": "Plataforma de preparação para exames com inteligência artificial"
+        },
         "FOODTECH": {
             "TITLE": "FOODTECH",
             "DESCRIPTION": "Sistema de Restaurant com Cardápio Digital e Pedidos Online"
@@ -49,8 +57,8 @@
     "ABOUT-SECTION":{
         "TITLE": "Olá, Sou Ed Angelis R Rieiro, Brasileiro 23/12/1984.\nSeja bem-vindo ao meu portfólio.",
         "DESCRIPTION": {
-            "P1": "Apaixonado por tecnologia desde sempre, fui apresentado ao desenvolvimento após ingressar no curso de Sistema de Informação em 08/2017, desde então programo e estudo praticamente todos os dias da minha vida, e sorrindo continuarei fazendo assim para o resto dela.",
-            "P2": "Quando não estou codando, estudando ou me exercitando, gosto de algumas atividades bem diversas, como mergulhar de cilindro, Jogar Poker, Jogar Beach Tennis, fato interessante sobre mim é que em algum momento da minha vida já ganhei a vida como jogador de poker profissional e em outro momento como instrutor de mergulho. Além dessas atividades mais inusitadas, gosto bastante também do básico, escutar música, assistir filmes, jogar games, ler alguma coisa pra relaxar antes de dormir.",
+            "P1": "Apaixonado por tecnologia desde sempre, fui apresentado ao desenvolvimento após ingressar no curso de Sistema de Informação em agosto de 2017, desde então programo e estudo praticamente todos os dias da minha vida, e sorrindo continuarei fazendo assim para o resto dela.",
+            "P2": "Quando não estou codando, estudando ou me exercitando, gosto de algumas atividades bem diversas, como mergulhar de cilindro, Jogar Poker, Jogar Tennis, além dessas atividades mais inusitadas, gosto bastante do básico, escutar música, assistir filmes, jogar games, ler algum livro.",
             "P3": "Me vejo daqui a 10 anos trabalhando em algum projeto de impacto mundial com milhões de usuários, codando sempre, mas também liderando alguma equipe de desenvolvimento, fora das telas me vejo cuidando de algum jardim, de alguns gatos, e vendo meus filhos crescerem."
         }
     },
